fixed alignment of board names

--- a/src/pages/about/about.css
+++ b/src/pages/about/about.css
@@ -83,12 +83,18 @@
     .board-card-container{
         padding: 0 40px 40px 40px;
         grid-template-columns: repeat(1, 1fr);
-        text-align: center;
     }
 
     .board-img{
         border-radius: 5px;
     }
+
+    .card-text{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
     .board-name-text{
         font-family: "Viga", sans-serif;
         font-weight: 400;
